# TrustAntivirus

./: .gitignore  Cargo.toml  LICENSE
src/: main.rs
src/core/: config.rs  engine.rs  mod.rs
src/core/scanner/: mod.rs
src/db/: mod.rs
src/io/: mod.rs
