[package]
name = "trust_antivirus"
version = "1.0.0"
authors = ["Adam Childs <adamdchilds@gmail.com>"]

[dependencies]
clap = "2.26.0"
rayon = "0.8.2"
rust-crypto = "0.2.36"
rusqlite = { version = "0.12.0", features = [ "bundled"] }
serde = "1.0.11"
serde_derive = "1.0.11"
time = "0.1.38"
walkdir = "1.0.7"
